// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`namespace namespace (object with multiple namespace types) 1`] = `
".parent .peer.pfx-bg-primary { background-color: #f00 }
.parent .peer.pfx-bg-secondary { background-color: #0f0 }
.parent .peer.pfx-brc-primary { border-color: #f00 }
.parent .peer.pfx-brc-secondary { border-color: #0f0 }
.parent .peer.pfx-c-primary { color: #f00 }
.parent .peer.pfx-c-secondary { color: #0f0 }
.parent .peer.pfx-fill-primary { fill: #f00 }
.parent .peer.pfx-fill-secondary { fill: #0f0 }"
`;

exports[`namespace namespace (object with parentClass) 1`] = `
".parent .bg-primary { background-color: #f00 }
.parent .bg-secondary { background-color: #0f0 }
.parent .brc-primary { border-color: #f00 }
.parent .brc-secondary { border-color: #0f0 }
.parent .c-primary { color: #f00 }
.parent .c-secondary { color: #0f0 }
.parent .fill-primary { fill: #f00 }
.parent .fill-secondary { fill: #0f0 }"
`;

exports[`namespace namespace (object with peerClass) 1`] = `
".peer.bg-primary { background-color: #f00 }
.peer.bg-secondary { background-color: #0f0 }
.peer.brc-primary { border-color: #f00 }
.peer.brc-secondary { border-color: #0f0 }
.peer.c-primary { color: #f00 }
.peer.c-secondary { color: #0f0 }
.peer.fill-primary { fill: #f00 }
.peer.fill-secondary { fill: #0f0 }"
`;

exports[`namespace namespace (object with prefix) 1`] = `
".wow-bg-primary { background-color: #f00 }
.wow-bg-secondary { background-color: #0f0 }
.wow-brc-primary { border-color: #f00 }
.wow-brc-secondary { border-color: #0f0 }
.wow-c-primary { color: #f00 }
.wow-c-secondary { color: #0f0 }
.wow-fill-primary { fill: #f00 }
.wow-fill-secondary { fill: #0f0 }"
`;

exports[`propertyMapping excluding properties 1`] = `
".bg-primary { background-color: #f00 }
.bg-secondary { background-color: #0f0 }
.brc-primary { border-color: #f00 }
.brc-secondary { border-color: #0f0 }
.c-primary { color: #f00 }
.c-secondary { color: #0f0 }"
`;

exports[`propertyMapping renaming properties 1`] = `
".bg-primary { background-color: #f00 }
.bg-secondary { background-color: #0f0 }
.brc-primary { border-color: #f00 }
.brc-secondary { border-color: #0f0 }
.my-name-for-color-primary { color: #f00 }
.my-name-for-color-secondary { color: #0f0 }
.fill-primary { fill: #f00 }
.fill-secondary { fill: #0f0 }"
`;
